logs/cookiecutter-leonardo-module.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/binaryornot'...
Listing './lib/python3.5/site-packages/binaryornot-0.4.4.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-3.3.dist-info'...
Listing './lib/python3.5/site-packages/cookiecutter'...
Listing './lib/python3.5/site-packages/cookiecutter-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/docs'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/docs/source'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/requirements'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/tests'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/tests/testapp'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/tests/testapp/tests'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/{{cookiecutter.repo_name}}'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/{{cookiecutter.repo_name}}/apps'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/{{cookiecutter.repo_name}}/migrations'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module/{{cookiecutter.project_name}}/{{cookiecutter.repo_name}}/widget'...
Listing './lib/python3.5/site-packages/cookiecutter_leonardo_module-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
